--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.19.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mongodb": "^4.2.2"
+    "mongodb": "^4.2.2",
+    "mongoose": "^6.1.5"
   }
 }
